src/parser/FOOL.g4
grammar FOOL;

@lexer::members {
   //there is a much better way to do this, check the ANTLR guide
   //I will leave it like this for now just becasue it is quick
   //but it doesn't work well
   public int lexicalErrors=0;
}

/*------------------------------------------------------------------
 * PARSER RULES
 *------------------------------------------------------------------*/



prog   : exp SEMIC                   #singleExp
       | let exp SEMIC               #letInExp
       | (classdef SEMIC)+ (prog)?   #classDefinitionExp
       ;

/* OOP */

classdef    : CLASS ID (INHERITS ID)? CLPAR (varasm SEMIC)* (fun)* CRPAR
            ;

classdec : ID ID ;

classasm : classdec ASM funcall ;

/* OOP */

let       : LET (dec SEMIC)+ IN ;

vardec  : type ID ;

varasm  : vardec ASM exp ;

fun    : type ID LPAR ( vardec ( COMMA vardec)* )? RPAR (let)?  exp ;

dec   : varasm           #varAssignment
      | fun              #funDeclaration
      | classasm         #classAssignment
      ;
         
   
type   : INT  
       | BOOL
      ;  
    
exp    :  ('-')? left=term ((PLUS | MINUS) right=exp)?
      ;
   
term   : left=factor ((TIMES | DIV) right=term)?
      ;
   
factor : left=value (EQ right=value)?
      ;     
   
value  :  INTEGER                           #intVal
      | ( TRUE | FALSE )                    #boolVal
      | LPAR exp RPAR                       #baseExp
      | IF cond=exp THEN CLPAR thenBranch=exp CRPAR ELSE CLPAR elseBranch=exp CRPAR  #ifExp
      | ID                                  #varExp
      | funcall                             #funExp
      ;

funcall : ID ( LPAR (exp (COMMA exp)* )? RPAR )? ;

   
/*------------------------------------------------------------------
 * LEXER RULES
 *------------------------------------------------------------------*/
SEMIC  : ';' ;
COLON  : ':' ;
COMMA  : ',' ;
EQ     : '==' ;
ASM    : '=' ;
PLUS   : '+' ;
MINUS  : '-' ;
TIMES  : '*' ;
DIV    : '/' ;
TRUE   : 'true' ;
FALSE  : 'false' ;
LPAR   : '(' ;
RPAR   : ')' ;
CLPAR  : '{' ;
CRPAR  : '}' ;
IF        : 'if' ;
THEN   : 'then' ;
ELSE   : 'else' ;
//PRINT : 'print' ; 
LET    : 'let' ;
IN     : 'in' ;
VAR    : 'var' ;
FUN    : 'fun' ;
INT    : 'int' ;
BOOL   : 'bool' ;

// OOP
CLASS  : 'class';
INHERITS : 'inherits';
NEW : 'new';

//Numbers
fragment DIGIT : '0'..'9';    
INTEGER       : DIGIT+;

//IDs
fragment CHAR  : 'a'..'z' |'A'..'Z' ;
ID              : CHAR (CHAR | DIGIT)* ;

//ESCAPED SEQUENCES
WS              : (' '|'\t'|'\n'|'\r')-> skip;
LINECOMENTS    : '//' (~('\n'|'\r'))* -> skip;
BLOCKCOMENTS    : '/*'( ~('/'|'*')|'/'~'*'|'*'~'/'|BLOCKCOMENTS)* '*/' -> skip;




 //VERY SIMPLISTIC ERROR CHECK FOR THE LEXING PROCESS, THE OUTPUT GOES DIRECTLY TO THE TERMINAL
 //THIS IS WRONG!!!!
ERR     : . { System.out.println("Invalid char: "+ getText()); lexicalErrors++; } -> channel(HIDDEN); 
